load("@npm//jest-cli:index.bzl", "jest_test")

jest_test(
    name = "repro",
    args = [
        "--config",
        "$(rootpath jest.config.js)",
        "--runTestsByPath",
        "$(rootpath index.test.js)",
        #"--node_options=--trace-event-categories=node",
        #"--node_options=--trace-event-file-pattern=/tmp/node-trace-$${pid}-$${rotation}.log",
    ],
    data = [
        "babel.config.js",
        "index.test.js",
        "jest.config.js",
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest",
        "@npm//jest",
        "@npm//jest-websocket-mock",
        "@npm//mock-socket",
    ],
)
